// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-5 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`defaultProps should render correctly for isLoading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3 {
  padding-right: 2.3em;
}

.emotion-6 {
  line-height: 1;
  font-size: 20px;
}

.emotion-8 {
  color: var(--bb-palette-text, #000000)!important;
}

.emotion-9.emotion-9 {
  font-size: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  height: 2.75em;
  margin: 0 0.75em;
  top: 0;
  right: 0;
  z-index: 2;
}

.emotion-10 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-11 {
  stroke-dasharray: 250;
  stroke-dashoffset: 200px;
  stroke: var(--bb-palette-text, #000000);
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
  <div
    class="emotion-6 emotion-0 emotion-8 emotion-9 bb-InputSpinner bb-Box bb-Spinner"
  >
    <svg
      class="emotion-10 bb-Spinnervector"
      viewBox="22 22 44 44"
    >
      <circle
        class="emotion-11 bb-SpinnerloaderCircle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </div>
</div>
`;

exports[`overrides Input.Spinner.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`overrides Input.Wrapper.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`overrides Input.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3 {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`overrides Input.placeholder.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-webkit-input-placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3::-moz-placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3:-ms-input-placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3::placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props should assign a ref 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-0:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<input
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
  type="text"
/>
`;

exports[`props should assign a ref via inputRef 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-0:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-0[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
}

.emotion-0::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-0::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<input
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Input"
  type="text"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props should render correctly when disabled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    disabled=""
    type="text"
  />
</div>
`;

exports[`props should render correctly when loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3 {
  padding-right: 2.3em;
}

.emotion-6 {
  line-height: 1;
  font-size: 20px;
}

.emotion-8 {
  color: var(--bb-palette-text, #000000)!important;
}

.emotion-9.emotion-9 {
  font-size: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  height: 2.75em;
  margin: 0 0.75em;
  top: 0;
  right: 0;
  z-index: 2;
}

.emotion-10 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-11 {
  stroke-dasharray: 250;
  stroke-dashoffset: 200px;
  stroke: var(--bb-palette-text, #000000);
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
  <div
    class="emotion-6 emotion-0 emotion-8 emotion-9 bb-InputSpinner bb-Box bb-Spinner"
  >
    <svg
      class="emotion-10 bb-Spinnervector"
      viewBox="22 22 44 44"
    >
      <circle
        class="emotion-11 bb-SpinnerloaderCircle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: var(--bb-palette-primary, #000000)!important;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-5 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props sizes should render large correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  font-size: 1.5rem;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props sizes should render medium correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  font-size: 1.25rem;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props sizes should render small correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  font-size: 0.875rem;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props states should render danger correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3 {
  border-color: var(--bb-palette-danger, #000000);
  box-shadow: var(--bb-palette-dangerTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="true"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props states should render primary correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3 {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props states should render success correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3 {
  border-color: var(--bb-palette-success, #000000);
  box-shadow: var(--bb-palette-successTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props states should render warning correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3 {
  border-color: var(--bb-palette-warning, #000000);
  box-shadow: var(--bb-palette-warningTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props types should render date correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="date"
  />
</div>
`;

exports[`props types should render email correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="email"
  />
</div>
`;

exports[`props types should render number correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="number"
  />
</div>
`;

exports[`props types should render password correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="password"
  />
</div>
`;

exports[`props types should render search correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="search"
  />
</div>
`;

exports[`props types should render tel correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="tel"
  />
</div>
`;

exports[`props types should render time correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="time"
  />
</div>
`;

exports[`props types should render url correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="url"
  />
</div>
`;

exports[`props variants should render bordered correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props variants should render borderless correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  border-bottom: 1px solid transparent;
}

.emotion-3:focus {
  border-bottom-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 2px 0px!important;
}

.emotion-3[disabled] {
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`props variants should render underline correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  border-bottom: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-3:focus {
  border-bottom-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 2px 0px!important;
}

.emotion-3[disabled] {
  padding: 0.4em 0.8em;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`theming Input.Spinner.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`theming Input.Wrapper.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-2 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`theming Input.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3 {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;

exports[`theming Input.placeholder.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-appearance: none;
  background: var(--bb-palette-white, #ffffff);
  color: var(--bb-palette-text, #000000);
  height: 2.75em;
  width: 100%;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 6px;
  padding: 0.4em 0.8em;
}

.emotion-3:focus {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primaryTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-3[disabled] {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
  color: var(--bb-palette-text100, #000000);
  cursor: not-allowed;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
}

.emotion-3::-webkit-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-moz-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3:-ms-input-placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::placeholder {
  color: var(--bb-palette-gray300, #000000);
}

.emotion-3::-webkit-input-placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3::-moz-placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3:-ms-input-placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-3::placeholder {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-InputWrapper bb-Box"
>
  <input
    aria-invalid="false"
    class="emotion-3 emotion-0 emotion-1 bb-Box bb-Input"
    type="text"
  />
</div>
`;
